		NOTE: Unless you need to perform complicated conditions/calculations, it is strongly suggested that you use the new XML item stats features instead of this callback!
	- MC_EVALUATE_TEAR_HIT_PARAMS(EntityPlayer, TearParams, WeaponType, float DamageScale, integer TearDisplacement, Entity Source)
		Optional param: PlayerType
		Used to modify mutable TearParams object.
* New Enums:
	- DoorMask
	- WaterClipFlag
	- PlayerHUDLayout
	- RoomEventOutput
	- CustomCacheTag
	- EvaluateStatStage
* Room:
	- GetWallColor()
* Isaac:
	- GetAllowedDoorsMaskForRoomShape: Returns a DoorMask representing all DoorSlots that are allowed for the given RoomShape.
* Added content and resources support for stringtable.sta, allowing for custom translation strings and categories. This also allows adding custom fortunes.
* Added the following customtag for items.xml:
	* "noexpansionpack" - Prevents the active item (with 1 or 2 max charges) from being picked by Expansion Pack trinket.
* Added the following customcache for items.xml:
	* "healthtype" - Re-evaluate the player's HealthType
	* "tearscap" - Re-evaluate the player's maximum tears-per-second before flat modifiers and multipliers. Triggers a CACHE_FIREDELAY eval when changed.
	* "statmultiplier" - Re-evaluate the multiplier on the player's stats gained from items (the same one used for Cracked Crown and Tainted Bethany). Triggers standard cache evals for the relevant stats when changed.
* Stats can now be assigned to collectibles, trinkets and nulls in items.xml! These stat modifications will behave identically to those from most vanilla items that modify those stats.
	- For example:
		tears="0.7" will behave like Sad Onion
		flattears="0.5" will behave like Pisces
		damage="1" will behave like Pentagram
		flatdamage="2" will behave like Curved Horn
	- Supported: tears, flattears, damage, flatdamage, shotspeed, speed, range, luck