@@ -10,6 +10,9 @@ __thiscall void Level::Update();
 "558bec6aff68????????64a1????????5083ec2c535657a1????????33c5508d45??64a3????????8bd98b45":
 __thiscall void Level::ChangeRoom(int targetRoomIDX, int dimension);
 
+"558bec83e4f881ece8000000":
+__thiscall void Level::swap_rooms(int leftIdx, int rightIdx);
+
 "558bec6aff68????????64a1????????5083ec185657a1????????33c5508d45??64a3????????8bf164a1":
 __thiscall bool Level::TryInitializeExtraBossRoom(unsigned int seed);
 
@@ -49,11 +52,17 @@ __thiscall bool Level::IsAltPath();
 "558bec6aff68????????64a1????????5083ec2c535657a1????????33c5508d45??64a3????????8bf9897d??648b15":
 __thiscall void Level::InitializeDevilAngelRoom(bool ForceAngel, bool ForceDevil);
 
+"558bec6aff68????????64a1????????505657a1????????33c5508d45??64a3????????8bf164a1":
+__thiscall RoomDescriptor* Level::GetRoomByIdx(int32_t idx, int32_t dimension);
+
 "558bec6aff68????????64a1????????5083ec24535657a1????????33c5508d45??64a3????????8bd9f30f7e05":
 __thiscall int Level::GetRandomRoomIndex(bool IAmErrorRoom, unsigned int Seed);
 
 "538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505381ec50040000":
 __thiscall void Level::generate_dungeon(RNG * RNG);
+
+"558bec6aff68????????64a1????????5083ec68a1????????33c58945??535657508d45??64a3????????8bd98b55":
+__thiscall void Level::place_rooms_backwards(LevelGenerator* levelGen, BackwardsStageDesc* backwardsStage, uint32_t stage, uint32_t minDifficulty, uint32_t maxDifficulty);
 
 "558bec83e4f883ec0c568bf18b86":
 __thiscall void Level::StartMamaMega(Vector * Position, Entity_Player* player);
