@@ -113,7 +113,6 @@ ModCallbacks.MC_POST_SLOT_SET_PRIZE_COLLECTIBLE = 1126
 ModCallbacks.MC_PLAYER_INIT_PRE_LEVEL_INIT_STATS = 1127
 ModCallbacks.MC_PLAYER_HEALTH_TYPE_CHANGE = 1128
 ModCallbacks.MC_POST_FORCE_ADD_PILL_EFFECT = 1129
-
 ModCallbacks.MC_PRE_DEVIL_APPLY_ITEMS = 1130
 ModCallbacks.MC_PRE_DEVIL_APPLY_STAGE_PENALTY = 1131
 ModCallbacks.MC_PRE_DEVIL_APPLY_SPECIAL_ITEMS = 1132
@@ -241,6 +240,11 @@ ModCallbacks.MC_POST_GLOWING_HOURGLASS_SAVE = 1300
 ModCallbacks.MC_POST_GLOWING_HOURGLASS_LOAD = 1301
 ModCallbacks.MC_PRE_GLOWING_HOURGLASS_SAVE = 1302
 ModCallbacks.MC_PRE_GLOWING_HOURGLASS_LOAD = 1303
+ModCallbacks.MC_POST_ROOM_SAVE_STATE = 1304
+ModCallbacks.MC_PRE_ROOM_RESTORE_STATE = 1305
+ModCallbacks.MC_POST_SWAP_ROOMS = 1306
+ModCallbacks.MC_POST_BACKWARDS_ROOM_SAVE = 1307
+ModCallbacks.MC_POST_BACKWARDS_ROOM_RESTORE = 1308
 
 ModCallbacks.MC_PRE_RENDER_CUSTOM_CHARACTER_MENU = 1333
 ModCallbacks.MC_PRE_PICKUP_GET_LOOT_LIST = 1334
