@@ -122,6 +122,18 @@ Additions:
 	- MC_EVALUATE_TEAR_HIT_PARAMS(EntityPlayer, TearParams, WeaponType, float DamageScale, integer TearDisplacement, Entity Source)
 		Optional param: PlayerType
 		Used to modify mutable TearParams object.
+	- MC_POST_ROOM_SAVE_STATE(Room, RoomDescriptor)
+		Fires after the room saves all entities and grid entities.
+	- MC_PRE_ROOM_RESTORE_STATE(Room, RoomDescriptor)
+		Fires before the room respawns all saved entities.
+	- MC_POST_SWAP_ROOMS(RoomDescriptor, RoomDescriptor)
+		Fires after two rooms have been swapped, due to Curse of the Maze.
+	- MC_POST_BACKWARDS_ROOM_SAVE(LevelStage, RoomDescriptor, string)
+		Fires after a room has been saved; to then be restored when generating the Ascent.
+		The string key (e.g. "boss_0", "treasure_0") identifies which slot the room was saved into.
+	- MC_POST_BACKWARDS_ROOM_RESTORE(LevelStage, RoomDescriptor, string)
+		Fires when generating the Ascent layout and one of the previously saved room is restored.
+		The string key (e.g. "boss_0", "treasure_0") identifies which slot the room was saved into.
 * New Enums:
 	- DoorMask
 	- WaterClipFlag
